testing/tests/ui/extends.stderr
error: whitespace control is not allowed on `extends`
 --> <source attribute>:1:3
  |
       1 | {%- extends "whatever.html" %}
         |   ^ close to this token
         |
 --> tests/ui/extends.rs:4:3
  |
4 | #[template(
  |   ^^^^^^^^

error: whitespace control is not allowed on `extends`
 --> <source attribute>:1:3
  |
       1 | {% extends "whatever.html" -%}
         |   ^ close to this token
         |
  --> tests/ui/extends.rs:11:3
   |
11 | #[template(
   |   ^^^^^^^^
